# Programmiersprachen-Uebung3

./: CMakeLists.txt  aufgabe1.cpp  aufgabe2bis4.cpp  aufgabe5.cpp  aufgabe6.cpp  aufgabe8.cpp  circle.cpp  circle.hpp  color.hpp  point2D.cpp  point2D.hpp  tests.cpp
